- bug fix - button view - buttons not setting "isUserTriggered" flag - bug fix - button view - button labels need to show "<" character properly - bug fix - button view - clear help ui when changing group - polish - button view - "locked" ui aligned

--- a/styles.css
+++ b/styles.css
@@ -248,6 +248,7 @@
 .iscript_buttonSettingsBlock
 {
 	font-style: italic;
+	margin-top: 0.125em;
 }
 .iscript_hidden
 {
